# ECAA-workflow

./: .env.example  .gitignore  .taplo.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  USERS.md  bacon.toml  codemeta.json  deny.toml  pyproject.toml  requirements-validator.txt  rust-toolchain.toml
crates/cli/: Cargo.toml
crates/cli/src/: chat.rs  chat_llm.rs  main.rs  migrate_sessions.rs
crates/cli/tests/: build_cli.rs  chat_repl.rs  dag_cli.rs  intake_cli.rs
crates/conversation/: Cargo.toml
crates/conversation/bindings/: AdjudicationStatus.ts  AssistantIntent.ts  AtomRoleFilter.ts  AtomSummary.ts  BranchInput.ts  ChainOfCustody.ts  CheckpointMode.ts  ClaimsEvidenceRow.ts  ConfirmationCard.ts  DecisionType.ts  EvidenceManifestEntry.ts  ExcludedPath.ts  HarnessEvent.ts  LiteratureContext.ts  LiteratureScope.ts  OpaquePortRef.ts  PriorClaimRow.ts  ProjectClass.ts  RemoteExecutionInfo.ts  SandboxRefusalRecord.ts  Session.ts  StructuredCaptureField.ts  StructuredCaptureFieldKind.ts  SuppressionClass.ts  Turn.ts  TurnRole.ts  UserInput.ts  UserInputKind.ts
crates/conversation/src/: audit_actor.rs  errors.rs  harness_batch.rs  heuristic_batch.rs  heuristic_confidence.rs  heuristic_cross_omics.rs  heuristic_failure.rs  heuristic_mock.rs  heuristic_refusal.rs  intake_path_hints.rs  lib.rs  mock.rs  persistence.rs  prompt.rs  prompt_role.txt  proposal_gate.rs  scorer.rs  sme_text.rs  tool_schemas.rs
crates/conversation/tests/: agents_md_tool_count_parity.rs  audit_proof_sidecar_emit.rs  auto_title_inflight_gate.rs  block_from_harness_states.rs  blocker_queue_appends.rs  branch_task_scoped.rs  conventional_mode_emission.rs  documented_constants.rs  emit_byte_characterization.rs  emit_race.rs  emit_roundtrip_schema_clean.rs  emit_validation_smoke.rs  fixture_runner.rs  force_classify_on_first_intake.rs  heuristic_batch_proptest.rs  intake_followup_convergence.rs  list_atoms.rs  literature_context_disabled.rs  literature_ro_crate.rs  metrics_recorders_persist.rs  opaque_sink_integration.rs  prompt_role_hash_stable.rs  proposal_gate.rs  prune_clears_in_memory_maps.rs  schemars_generation.rs  scorer_dry_run.rs  session_save_update_race.rs  session_transaction.rs  sidecar_emission.rs  tool_boundary_adversarial.rs  verify_cache_prefix.rs
crates/core/: Cargo.toml
crates/core/benches/: classifier.rs
crates/core/bindings/: AdapterPolicy.ts  AdjudicationQueueEntry.ts  AgentCodeRecord.ts  AppliedRemediation.ts  ArchetypeDefinition.ts  AssumptionLedger.ts  AssumptionPolicyPrivacyClass.ts  AssumptionPolicyTable.ts  AssumptionSource.ts  AtomId.ts  AtomRole.ts  AtomSelectionRationale.ts  AttemptKind.ts  BackendCapabilityReport.ts  BlockedRecord.ts  BlockerContext.ts  BlockerKind.ts  Claim.ts  ClaimContract.ts  ClaimVerificationReport.ts  ClarificationOrValidationNeeded.ts  ClassRequirementTag.ts  CohortDescriptor.ts  ConditionalEdge.ts  Constraint.ts  ConstraintLossAck.ts  ConstraintSeverity.ts  ContainerSpec.ts  CrossVersionReport.ts  DAG.ts  DecisionActor.ts  DecisionRecord.ts  Deprecation.ts  DesiredOutput.ts  DetectionAction.ts  DisambiguationRegistry.ts  Disposition.ts  DispositionStatus.ts  DuplicateCandidate.ts  DuplicateDetectionResult.ts  (+105 more)
crates/core/src/: ablation.rs  adapter_registry.rs  agent_code.rs  archetype.rs  archetype_registry.rs  archetype_slots.rs  assumption_policy.rs  atom.rs  atom_registry.rs  atom_safety.rs  audit_writer.rs  bco.rs  blocker.rs  builder.rs  checkpoint_mode.rs  claim_contract.rs  claim_extractor.rs  claim_verifier.rs  classify.rs  classify_gates.rs  clock.rs  composite_score.rs  config.rs  container_state.rs  cost.rs  cross_version_diff.rs  dag.rs  decision_log.rs  decision_substrate.rs  derived_image.rs  determinism_shim.rs  disambiguation.rs  disposition.rs  edam.rs  emission_invariants.rs  emit_mode.rs  env_helpers.rs  env_validator.rs  error_envelope.rs  expression.rs  (+39 more)
crates/core/templates/: AGENT-EXECUTOR.md
crates/core/tests/: agent_code.rs  assumption_policy_loader.rs  atom_registry_overlay.rs  atom_role_consumers.rs  atom_role_speculative_variants.rs  atom_safety_integration.rs  audit_proof_invariants.rs  audit_proof_loader.rs  audit_proof_orchestrator.rs  audit_proof_report_types.rs  audit_writer_tamper.rs  auditability_corpus_smoke.rs  backward_search_finds_path.rs  backward_search_rescues_flex_mr.rs  blocker_variant_count.rs  claim_extractor_excludes.rs  claim_verifier_pvalue_tolerance.rs  classifier_cross_omics_n_way.rs  classifier_tie_surfacing.rs  classify_cross_omics_no_spurious_bulk.rs  classify_integrator_kind_modifier.rs  classify_no_data_9999_placeholder.rs  compatibility_proof_evidence.rs  compose_inheritance.rs  composer_adversarial.rs  composer_cross_omics.rs  composer_cross_omics_n_way.rs  composer_determinism.rs  composer_generic_omics_fallthrough.rs  composer_literature.rs  composer_offline.rs  composer_v4_archetype_seed.rs  composer_v4_assumption_ledger.rs  composer_v4_atom_selection.rs  composer_v4_backward_search.rs  composer_v4_bare_modality.rs  composer_v4_cross_omics.rs  composer_v4_determinism.rs  composer_v4_discover_companion.rs  composer_v4_dispatch_intent.rs  (+76 more)
crates/ecaa-conformance/: Cargo.toml  README.md
crates/ecaa-conformance/src/: lib.rs
crates/ecaa-conformance/tests/: ablation_contract.rs  audit_proof_invariants.rs  spec_consistency.rs  wrroc_v05_conformance.rs
crates/ecaa-types/: Cargo.toml  README.md
crates/ecaa-types/bindings/: BlockerContext.ts  InvariantStatus.ts  InvariantVerdict.ts  StallAction.ts  ToolErrorEnvelope.ts
crates/ecaa-types/src/: ablation.rs  atom.rs  blocker.rs  consts.rs  error_envelope.rs  invariants.rs  lib.rs  reexecution.rs
crates/harness/: Cargo.toml
crates/harness/bindings/: GpuRequirement.ts  ResourceRequirements.ts
crates/harness/src/: _observability.rs  cache_eviction.rs  constants.rs  dag_patch.rs  dispatch_guard.rs  ecaa_io.rs  (+24 more)
crates/server/: Cargo.toml
lib/plotting/: _cli.py  core.py  delegation.py  pyproject.toml  quality_scorer.py  requirements.txt  theme.json  view_data.schema.json
(+2521 files in other folders)
