[package]
name = "ecaa-workflow-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SuLab/ECAA-workflow"
description = "Command-line front-end for the ecaa-workflow compiler (chat / intake / build / dag / serve)."

[[bin]]
name = "ecaa-workflow"
path = "src/main.rs"

[[bin]]
name = "ecaa-workflow-audit-proof"
path = "src/bin/scripps-workflow-audit-proof.rs"

[dependencies]
ecaa-workflow-core = { version = "0.1", path = "../core" }
ecaa-workflow-conversation = { version = "0.1", path = "../conversation" }
clap = { workspace = true }
rustyline = "14"
colored = "2"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sha2.workspace = true
# v3 P7 — `migrate-sessions` subcommand reads/writes a `Version`
# directly when detecting the legacy `u32` shape.
semver = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
# `migrate_sessions` unit tests stage temp dirs.
tempfile.workspace = true
# `Command::cargo_bin("ecaa-workflow")` locator + `Assert` helpers for
# `tests/*_cli.rs` integration tests, so CLI subcommands have unit-level
# coverage rather than only Makefile / shell-script end-to-end paths.
assert_cmd = { workspace = true }
# Predicate combinators used by `Assert::stdout(predicate)`. Pinned
# inline because the workspace doesn't promote it (only assert_cmd
# consumers need it).
predicates = "3"

[lints]
workspace = true
