[package]
name = "scripps-workflow-ecaa-types"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Canonical Rust binding of the ECAA v0.1 typed object model — see docs/ecaa-spec/v0.1.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ts-rs = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
# Layer 5 — JsonSchema derive for the canonical ECAA wire types so the
# subgraph-schemas/*.schema.json artifacts can be regenerated rather
# than hand-maintained. See workspace Cargo.toml for the version pin
# rationale.
schemars = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
